# RustyWorld

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: main.rs  mobs.rs  player.rs  terrain.rs  time.rs  world.rs
